crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__class_variable_read_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/class_variable_read_node.rb
---
****FORMATTED****
@@foo

****AST****
ProgramNode: "@@foo"
__ClassVariableReadNode: "@@foo"
