crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__constant_or_write_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/constant_or_write_node.rb
---
****FORMATTED****
Target ||= value

****AST****
ProgramNode: "Target ||= value"
__ConstantOrWriteNode: "Target ||= value"
____CallNode: "value"
