crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__constant_path_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/constant_path_node.rb
---
****FORMATTED****
Foo::Bar

****AST****
ProgramNode: "Foo::Bar"
__ConstantPathNode: "Foo::Bar"
____ConstantReadNode: "Foo"
